--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
+# Telegram configuration variables
 TELEGRAM_TOKEN_ID="your_telegram_token_id"
 TELEGRAM_CHAT_ID="your_telegram_chat_id"
+
+# NUT configuration variables
 NUT_CLIENT_NAME="your_nut_client_name"
 NUT_CLIENT_HOST="your_nut_client_host"
 NUT_CLIENT_USER="your_nut_client_user"
 NUT_CLIENT_PASSWORD="your_nut_client_password"
+
+# Wake-on-LAN MAC address list (comma-separated) 
+WOL_MAC_LIST=""
