--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,8 @@ NUT_CLIENT_HOST="your_nut_client_host"
 NUT_CLIENT_USER="your_nut_client_user"
 NUT_CLIENT_PASSWORD="your_nut_client_password"
 
-# Wake-on-LAN MAC address list (comma-separated) 
+# Wake-on-LAN configuration variables
+# MAC address list (comma-separated) 
 WOL_MAC_LIST=""
+# Interval in minutes, Zero to disable
+AUTO_WAKE_INTERVAL="0"
